[gd_scene load_steps=9 format=3 uid="uid://dylor4fnn7qvp"]

[ext_resource type="Script" path="res://Scenes/uiScript.gd" id="1_2246s"]
[ext_resource type="FontFile" uid="uid://cettjasordema" path="res://Font/PixeloidSans-Bold.otf" id="2_q7pk6"]
[ext_resource type="FontFile" uid="uid://bar3xt3m36k4s" path="res://Font/PixeloidMono.otf" id="3_m78vo"]
[ext_resource type="Texture2D" uid="uid://dk6v4qffdmhnj" path="res://Assets/SHADOW Series - Free Ui/borders/Sprite/border 1.png" id="4_smcll"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xb563"]
bg_color = Color(0.0627451, 0.0823529, 0.0901961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n5ude"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ibotj"]
bg_color = Color(0.498039, 0.882353, 0.866667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nltto"]
bg_color = Color(0.737255, 0.737255, 0.737255, 1)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2246s")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 638.0
offset_bottom = 361.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xb563")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NombreVBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -183.0
offset_top = 75.0
offset_right = 184.0
offset_bottom = 111.0
grow_horizontal = 2

[node name="Nombre del juego" type="Label" parent="CanvasLayer/NombreVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.541176, 0.776471, 0.784314, 1)
theme_override_colors/font_shadow_color = Color(0.147828, 0.229467, 0.234033, 1)
theme_override_colors/font_outline_color = Color(0.329412, 0.470588, 0.478431, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 7
theme_override_fonts/font = ExtResource("2_q7pk6")
theme_override_font_sizes/font_size = 28
text = "*Nombre del juego*"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -27.0
offset_right = 117.0
offset_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="IniciarButton" type="Button" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m78vo")
theme_override_styles/normal = SubResource("StyleBoxFlat_n5ude")
theme_override_styles/hover = SubResource("StyleBoxFlat_ibotj")
text = "Iniciar"

[node name="OpcionesButton" type="Button" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m78vo")
theme_override_styles/normal = SubResource("StyleBoxFlat_n5ude")
theme_override_styles/hover = SubResource("StyleBoxFlat_ibotj")
theme_override_styles/focus = SubResource("StyleBoxFlat_nltto")
text = "Opciones"

[node name="ColeccionButton" type="Button" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m78vo")
theme_override_styles/normal = SubResource("StyleBoxFlat_n5ude")
theme_override_styles/hover = SubResource("StyleBoxFlat_ibotj")
theme_override_styles/focus = SubResource("StyleBoxFlat_nltto")
text = "Colección de items"

[node name="ComoJugarButton" type="Button" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m78vo")
theme_override_styles/normal = SubResource("StyleBoxFlat_n5ude")
theme_override_styles/hover = SubResource("StyleBoxFlat_ibotj")
theme_override_styles/focus = SubResource("StyleBoxFlat_nltto")
text = "Cómo Jugar"

[node name="CreditosButton" type="Button" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m78vo")
theme_override_styles/normal = SubResource("StyleBoxFlat_n5ude")
theme_override_styles/hover = SubResource("StyleBoxFlat_ibotj")
theme_override_styles/focus = SubResource("StyleBoxFlat_nltto")
text = "Créditos"

[node name="SalirButton" type="Button" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_m78vo")
theme_override_styles/normal = SubResource("StyleBoxFlat_n5ude")
theme_override_styles/hover = SubResource("StyleBoxFlat_ibotj")
theme_override_styles/focus = SubResource("StyleBoxFlat_nltto")
text = "Salir"

[node name="Border1" type="Sprite2D" parent="."]
position = Vector2(316.5, 181)
scale = Vector2(5.39316, 6.0339)
texture = ExtResource("4_smcll")

[connection signal="pressed" from="CanvasLayer/VBoxContainer2/IniciarButton" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer2/OpcionesButton" to="." method="_on_opciones_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer2/ColeccionButton" to="." method="_on_coleccion_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer2/SalirButton" to="." method="_on_salir_button_pressed"]
